# rockin-robin

./: .env.sample  .gitignore  .replit  README.md  main.py  pyproject.toml  replit.nix  requirements.txt
rockin_robin/: main.py  routes.py
rockin_robin/crew/: crew.py
rockin_robin/crew/config/: agents.yaml  tasks.yaml
rockin_robin/crew/custom_tools/: markdown_to_pdf.py  truncate_prompt.py
rockin_robin/crew/utils/: markdown_to_pdf.py
rockin_robin/custom_tools/: markdown_to_pdf.py
rockin_robin/templates/: base.html  index.html  results.html
src/rockin_robin/: crew.py  main.py
src/rockin_robin/config/: agents.yaml  tasks.yaml
src/rockin_robin/custom_tools/: markdown_to_pdf.py
