[tool.poetry]
name = "rockin-robin"
version = "0.1.0"
description = ""
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}
pypandoc = "^1.13"
langchain-anthropic = "^0.1.13"
tenacity = "^8.3.0"

[tool.poetry.scripts]
rockin_robin = "rockin_robin.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
